# Embodied-AI-Exploration-Lab1

./: .gitignore  1. linux.html  1. linux.md  1.linux.en.md  2. ros_experiment.html  2. ros_experiment.md  README.md  chapter1.2_ros_experiment.md  experiment_handbook.cn.md  experiment_handbook.en.md  experiment_handbook.md  handbook.md  handbook_lab1.md  handbook_lab2.html  handbook_lab2.md  midterm_topic.md  quick_test.sh  reading_sensor.cn.md  reading_sensor.html  reading_sensor.md  setup_course.sh  temp.md
doc/: 1. linux.md  1.linux.en.md  2_ros_experiment.html  2_ros_experiment.md  2_ros_experiment_cn.md
generate_doc/: generate_doc.md  header.tex  readme.md  style.css
linux_exp/: controller_simple.py  motor_simple.py
src/ros_course_examples/: CMakeLists.txt  experiment_handbook.en.md  experiment_handbook.zh.md  package.xml
src/ros_course_examples/launch/: basic_communication.launch  move_turtlebot_demo.launch  multi_turtlebot_game.launch  ros_communication_demo.launch
src/ros_course_examples/nodes/: add_two_ints_client.py  add_two_ints_server.py  controller_node.py  dual_teleop.py  game_referee.py  image_publisher.py  motor_node.py  move_turtlebot.py  random_walker.py  student_chaser_template.py  topic_publisher.py  topic_subscriber.py
src/ros_course_examples/rviz/: basic_comm.rviz  turtlebot_demo.rviz
src/ros_course_examples/scripts/: run_basic_demo.sh  run_game_v1.sh  run_game_v3.sh  run_shape_demo.sh  setup_master.sh  setup_slave.sh
src/ros_course_examples/simulation_demo/: controller.py  motor.py
src/ros_course_examples/worlds/: arena.world
(+19 files in other folders)
